<resources>
    <string name="app_name">Easy Flight</string>
    <string name="developer_names">Paras Lakhdeep Savita</string>
    <string name="from">From </string>
    <string name="splash_screen_logo">splash_screen_logo</string>
    <string name="log_sign_logo">log/sign_logo</string>
    <string name="e_mail_or_username">Username</string>
    <string name="password">Password</string>
    <string name="remember_me_radiobutton">Remember me</string>
    <string name="log_in_button">Log In</string>
    <string name="forget_password">Forget Username or Password?</string>
    <string name="text_or">OR</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="e_mail_id">E-mail</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up_with_google">Sign up with google</string>
    <string name="sign_up_with_facebook">sign up with Facebook</string>
    <string name="skip">SKIP</string>
    <string name="welcome_text">Welcome</string>
    <string name="back">Back</string>
    <string name="transaction">Transaction</string>
    <string name="successful">Successful</string>
    <string name="transaction_done_clipart">Transaction</string>
    <string name="please_activate_your_ticket">Please activate your ticket</string>
    <string name="before_boarding">before boarding</string>
    <string name="redirecting_text">Automatically redirecting back to app</string>
    <string name="reloading_clipart">reloading clipart</string>
    <string name="easy_flight_app_name">Easy Flight</string>
    <string name="to">To</string>
    <string name="departure_text">Departure</string>
    <string name="_15_apr">15 APR</string>
    <string name="return_text">Return</string>
    <string name="_21_arp">21 ARP</string>
    <string name="passenger_label_text">Passenger</string>
    <string name="adults_label">ADULTS</string>
    <string name="_12_years_adult_age">12+ years</string>
    <string name="children_text">CHILDREN</string>
    <string name="_1_12_years">1-12 years</string>
    <string name="one_way">One Way</string>
    <string name="round_trip">Round Trip</string>
    <string name="non_stop_check_box">Non stop flights only</string>
    <string name="search_flights_label">SEARCH FLIGHTS</string>
    <string name="text_user_register_here">Not on Easy Flight? Sign Up!</string>
    <string name="text__user_log_in">Already an User? Log In here!</string>
    <string name="settings_tittle">Settings</string>
    <string name="welcome_to_nthe_all_new_neasy_flight_app">Welcome to\nthe all new\nEasy Flight App</string>
    <string name="give_us_a_chance_to_serve_you">Give us a chance to serve you!</string>
    <string name="travel_advisory">Travel Advisory</string>
    <string name="travel_warning">Please be aware of any coronavirus \n(COVID-19) travel advisories and \nreview updates from World \nHealth Organisation (WHO). Due to \nthe unprecedented volume of travel \ndisruptions, refunds may take up to 30 \ndays to process.</string>
    <string name="find_out_more">Find out more</string>
    <string name="delhi">Delhi</string>
    <string name="mumbai">Mumbai</string>
    <string name="monday_2020">Monday 2020</string>
    <string name="friday_2020">Friday 2020</string>
    <string name="_0">0</string>
    <string name="economy">Economy</string>
    <string name="business">Business</string>
    <string name="first_class">First Class</string>
    <string name="searched_result">Searched Result</string>
    <string name="del">DEL</string>
    <string name="_13_00">13:00</string>
    <string name="_2_hrs_10_min">2 hrs 10 min</string>
    <string name="non_stop">Non-stop</string>
    <string name="bom">BOM</string>
    <string name="_22_00">22:00</string>
    <string name="ac_779">AC 779</string>
    <string name="flight_info">Flight Info</string>
    <string name="dollar_sign">$</string>
    <string name="_1400">1400</string>
    <string name="yul_montreal">YUL - Montreal</string>
    <string name="pierre_elliott_trudeau_intl">Pierre Elliott Trudeau Intl.</string>
    <string name="_9_15_p_m_4_25p_m">9:15 p.m. - 4:25p.m.</string>
    <string name="qatar_airways_764_boeing_777_300er">Qatar Airways 764 . Boeing 777-300er</string>
    <string name="_12h_10m">12h 10m</string>
    <string name="doh_doha">DOH- Doha</string>
    <string name="hamad_intl">Hamad Intl.</string>
    <string name="_4h_15m_stop">4h 15m stop</string>
    <string name="total_duration_19h_55m">Total Duration: 19h 55m</string>
    <string name="baggage_fee_information">Baggage Fee Information</string>
    <string name="total">Total</string>
    <string name="_1000">$1000</string>
    <string name="traveler">/traveler</string>
    <string name="select_this_flight">Select this flight</string>
    <string name="username">username</string>
    <string name="themes">Themes</string>
    <string name="preferences">Preferences</string>
    <string name="security_amp_data"><![CDATA[Security & Data]]></string>
    <string name="advance_setting">Advance Setting</string>
    <string name="follow_us">Follow Us</string>
    <string name="tutorial">Tutorial</string>
    <string name="help">Help</string>
    <string name="feedback_amp_suggestion"><![CDATA[Feedback & Suggestion]]></string>
    <string name="about">About</string>
    <string name="contact_us">Contact Us</string>
    <string name="secure_checkout">SECURE CHECKOUT</string>
    <string name="who_s_travelling">Who\'s travelling?</string>
    <string name="traveller_names_must_match_government_issued_nphoto_id_exactly">Traveller names must match government issued \n photo ID exactly.</string>
    <string name="complete_booking">Complete Booking</string>
    <string name="remember_this_card_for_future_use">Remember this card for future use</string>
    <string name="h2k_000">H2K 000</string>
    <string name="postal_code">Postal code*</string>
    <string name="qc_bc">QC,BC</string>
    <string name="province">Province*</string>
    <string name="city">city</string>
    <string name="city_mandatory">City*</string>
    <string name="ex_suit_444_apt_00">(ex. Suit 444, Apt. 00)</string>
    <string name="billing_address_2">Billing address 2</string>
    <string name="ex_123_main">(ex. 123 Main)</string>
    <string name="billing_address_1">Billing address 1*</string>
    <string name="canada">Canada</string>
    <string name="country_territory">Country/Territory*</string>
    <string name="cvv">CVV*</string>
    <string name="security_code">Security code*</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="name_of_card_holder">Name of Card Holder</string>
    <string name="debit_credit_card_number">Debit/Credit card number*</string>
    <string name="name_on_card">Name on card</string>
    <string name="name_on_card_text">Name on card*</string>
    <string name="mastercard">Mastercard</string>
    <string name="visa">Visa</string>
    <string name="american_express">American Express</string>
    <string name="payment_option">How would you like to pay?</string>
    <string name="frequent_flyer_tsa_precheck_and_more">Frequent flyer, TSA precheck and more</string>
    <string name="choose_seats">Choose seats</string>
    <string name="seat_selection">Seat selection</string>
    <string name="day">Day</string>
    <string name="date_of_birth">Date of birth*</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="gender">Gender*</string>
    <string name="passport">Passport*</string>
    <string name="receive_text_alert_about_this_trip">Receive text alert about this trip</string>
    <string name="in_case_we_need_to_reach_you">In case we need to reach you</string>
    <string name="phone_number">Phone Number*</string>
    <string name="country_territory_code">Country/Territory Code*</string>
    <string name="last_name">Last name</string>
    <string name="last_name_mandatory">Last name*</string>
    <string name="middle_name">Middle name</string>
    <string name="middle_name_mandatory">Middle name</string>
    <string name="first_name">First name</string>
    <string name="first_name_mandatory">First name*</string>
</resources>
