<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/google_logo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_dashboard"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="30dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/app_name_easy_flight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_weight="1"
            android:text="@string/easy_flight_app_name"
            android:textColor="@color/white"
            android:textSize="27sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_Skip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/skip"
            android:textAlignment="viewEnd"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <EditText
        android:id="@+id/edit_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="400dp"
        android:layout_marginRight="50dp"
        android:ems="10"
        android:hint="@string/e_mail_or_username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:labelFor="@id/edit_username"
        android:drawableStart="@drawable/person"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_below="@+id/edit_username"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="7dp"
        android:layout_marginRight="50dp"
        android:autofillHints="Enter your password"
        android:ems="10"
        android:hint="@string/password"
        android:drawableStart="@drawable/password_key_image"
        android:inputType="textPersonName"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/text_forget_password"
        android:layout_below="@id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:textAlignment="center"
        android:shadowColor="@color/white"
        android:textColor="@color/colorPrimary"
        android:text="@string/forget_password"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text_forget_password"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="100dp"
        android:text="@string/log_in_button"
        android:background="@drawable/round_corner_button" />

    <TextView
        android:id="@+id/text_register_user"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/text_user_register_here"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textStyle="bold" />

</RelativeLayout>